<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.LoginFragment">

    <FrameLayout
        android:id="@+id/login_framelayout_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="Aura Parfum"
            android:fontFamily="cursive"
            android:drawableEnd="@drawable/ic_cart"
            android:drawableTint="@color/white"
            android:textSize="50sp"/>
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_logo">

        <EditText
            android:id="@+id/fragment_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size"
            android:hint="@string/edit_text_hint_email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_login_email">

        <EditText
            android:id="@+id/fragment_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size"
            android:hint="@string/edit_text_hint_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fragment_login_forget_pw"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_akun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_login_password" />


    <TextView
        android:id="@+id/fragment_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_framelayout_header"
        android:text="@string/login_label"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:fontFamily="cursive"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/black"/>



    <com.irvan.aurashop.utils.AuraShopButton
        android:id="@+id/fragment_login_button"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/button_background"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_login_password"
        android:text="@string/login_btn"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidak_punya_akun"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/fragment_login_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buat_akun"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>