<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CartListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cart_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cart_list_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_my_cart"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/recyclerview_cart_item_marginTop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/cart_list_linearleayout_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cart_list_toolbar"/>

    <TextView
        android:id="@+id/cart_list_no_found_product_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:text="@string/no_cart_items_found"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/no_data_found_textSize"
        app:layout_constraintBottom_toTopOf="@+id/cart_list_linearleayout_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cart_list_toolbar"/>

    <LinearLayout
        android:id="@+id/cart_list_linearleayout_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/linearlayout_checkout_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtotal_shops"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/checkout_label_value_textSize"/>

            <TextView
                android:id="@+id/cart_list_checkout_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:text="RP 100000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cart_shipping_charge"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/checkout_label_value_textSize"/>

            <TextView
                android:id="@+id/cart_list_checkout_shipping_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:text="RP 20000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cart_grand_total"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:textColor="@color/dark_gray"/>

            <TextView
                android:id="@+id/cart_list_checkout_must_pay_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:text="RP 120000"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/cart_list_checkout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/checkout_label_btn"
            android:textSize="@dimen/btn_textsize"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>