<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddressListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/address_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/address_list_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_address_list"
            android:textSize="@dimen/tool_bar_title_size"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/add_address_list_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_address_margin_btn"
        android:background="@drawable/item_primary_color_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/add_address_margin_btn"
        android:text="@string/add_address_lbl"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/add_address_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_list_toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/address_list_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/recyclerview_address_list_marginTop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_address_list_txt"/>

    <TextView
        android:id="@+id/address_list_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_address_found"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/no_data_found_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_address_list_txt"/>

</androidx.constraintlayout.widget.ConstraintLayout>